--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.0'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
@@ -7,7 +7,6 @@ group 'com.miguel'
 version '1.0-SNAPSHOT'
 
 repositories {
-    jcenter()
     mavenCentral()
     mavenLocal()
 }
@@ -17,10 +16,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    compileOnly 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
-
-    compileOnly 'com.miguel:spigot:1.16.3'
-    compileOnly 'com.miguel.util:spermission:1.16.3'
+    compileOnly "org.spigot:spigot:1.16.5"
 
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.7.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
@@ -33,7 +29,6 @@ build.finalizedBy shadowJar
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
-
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
