--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,13 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
-    compileOnly "org.spigot:spigot:1.16.5"
+    compileOnly("papermc:paper_patched:1.16.5")
+}
 
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.7.2'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
+test {
+    useJUnitPlatform()
 }
 
 sourceSets.main.java.srcDirs = ['src/main/kotlin']
