--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,6 @@ name: SK-Server
 version: 1.0.0
 main: com.miguel.Main
 author: Miguellkr16
-api-version: 1.13
+api-version: 1.17
+depend:
+  - ProtocolLib
