--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
     compileOnly 'io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT'
     compileOnly("com.comphenix.protocol:ProtocolLib:4.7.0")
